tela de login finalizado

--- a/views/Cadastro/index.html
+++ b/views/Cadastro/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sabrina Modas | Pagamentos</title>
+    <title>Sabrina Modas | Cadastro</title>
     <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../../css/pagamento.css">
 </head>
@@ -22,66 +22,10 @@
 
     <main class="main">
 
-        <div class="container-pagamento">
-            <div class="container-img">
-                <img class="img-pagamento" src="../../img/produtos/produto1.png" alt="imagem-produto">
-            </div>
-            <div class="container-forms">
-
-                <div class="container-forms--header">
-                    <div class="container-preco-cod">
-                        <p class="preco">R$80,00</p>
-                        <p class="codigo">Código: XXXXX</p>
-                    </div>
-                    <div class="container-produtos">
-                        <h3 class="titulo-produtos">Dados do Produto</h3>
-
-                        <input class="input" type="text" id="Tamanho" name="Tamanho" placeholder="Tamanho">
-                        <input class="input" type="text" id="Quantidade" name="Quantidade" placeholder="Quantidade">
-
-                    </div>
-                </div>
-
-
-
-                <div class="container-forms--main">
-                    <div class="container-dadosCliente">
-                        <h3 class="titulo-dadosCliente">Dados do Cliente</h3>
-                        <input class="input" type="text" id="Nome" name="Nome" placeholder="Nome">
-
-                        <input class="input" type="text" id="Email" name="Email" placeholder="Email">
-
-                        <input class="input" type="text" id="Cpf" name="Cpf" placeholder="Cpf">
-                    </div>
-
-                    <div class="container-dadosEntrega">
-                        <h3 class="titulo-dadosEntrega">Dados da Entrega</h3>
-
-
-                        <input class="input" type="text" id="Endereco" name="Endereco" placeholder="Endereço">
-
-                        <input class="input" type="text" id="Numero" name="Numero" placeholder="Número do Endereço">
-
-                        <input class="input" type="text" id="Cidade" name="Cidade" placeholder="Cidade">
-
-                        <input class="input" type="text" id="Estado" name="Estado" placeholder="Estado">
-
-                        <input class="input" type="text" id="Cep" name="Cep" placeholder="Cep">
-
-
-                        <input class="input" type="text" id="Telefone" name="Telefone"
-                            placeholder="Telefone para contato">
-                    </div>
-
-                </div>
-
-                <div class="container-button">
-                    <button class="button-finalizar">Finalizar</button>
-                </div>
-
-            </div>
-
+        <div class="container-titulo">
+            <h2>Cadastro</h2>
         </div>
+        
 
     </main>
 </body>
