--- a/views/Cadastro/index.html
+++ b/views/Cadastro/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabrina Modas | Cadastro</title>
     <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../../css/pagamento.css">
+    <link rel="stylesheet" href="../../css/login.css">
 </head>
 
 <body>
@@ -22,11 +22,26 @@
 
     <main class="main">
 
-        <div class="container-titulo">
-            <h2>Cadastro</h2>
-        </div>
-        
+        <div class="container-form-login">
+            <form action="" class="formulario">
 
+                <h3 class="form-titulo">Cadastrar</h3>
+
+                <label class="label" for="Nome">Nome completo</label>
+                <input class="input" type="text" placeholder="Nome completo" id="Nome">
+
+                <label class="label" for="Email">Email</label>
+                <input class="input" type="text" placeholder="E-mail" id="Email">
+
+                <label class="label" for="Senha">Senha</label>
+                <input class="input" type="text" placeholder="Senha" id="Senha">
+
+                <label class="label" for="Senha">Digite novamente sua senha</label>
+                <input class="input" type="text" placeholder="Senha" id="Digite novamente sua senha">
+                
+                <a href="" class="button-login">Cadastrar</a>
+            </form>
+        </div>
     </main>
 </body>
 
