--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -44,3 +44,56 @@
     display: grid;
     place-items: center;
 }
+
+.container-titulo{
+    margin-top: 2rem;
+}
+
+.container-form-cadastro{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    border: 1px solid #F1F0FA;
+    padding: 5rem;
+}
+
+.form-titulo{
+    text-align: center;
+    position: relative;
+    bottom: 2rem;
+}
+
+.label{
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.input{
+    border: 1px solid #F1F0FA;
+    background-color: #F1F0FA;
+    border-radius: 3px;
+    width: 95%;
+    padding: 15px 15px;
+    margin: 0.5rem;
+}
+
+.button-login{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 1rem;
+    background-color: #FFA7DE;
+    color: #ffffff;
+    font-weight: 400;
+    border: none;
+    padding: 15px 30px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 14px;
+    font-style: normal;
+}
