--- a/views/Cadastro/index.html
+++ b/views/Cadastro/index.html
@@ -6,43 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabrina Modas | Cadastro</title>
     <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../../css/login.css">
+    <link rel="stylesheet" href="../../css/cadastro.css">
 </head>
 
 <body>
-    <header class="header">
-        <a href="../../index.html">
-            <img src="../../img/logo.png" alt="logo" class="logo-header">
-        </a>
-    </header>
-
-    <div class="container-hr">
-        <hr class="hr-header">
-    </div>
 
     <main class="main">
 
-        <div class="container-form-login">
+        <div class="container-form-cadastro">
             <form action="" class="formulario">
 
-                <h3 class="form-titulo">Cadastrar</h3>
+                <div class="container-logo-form">
+                    <img class="logo-form" src="../../img/logo.png" alt="logo">
+                </div>
 
-                <label class="label" for="Nome">Nome completo</label>
-                <input class="input" type="text" placeholder="Nome completo" id="Nome">
+                <div class="input-wrapper">
+                    <input class="input-box" type="text" placeholder="Nome" required>
+                    <span class="underline"></span>
+                </div>
 
-                <label class="label" for="Email">Email</label>
-                <input class="input" type="text" placeholder="E-mail" id="Email">
+                <div class="input-wrapper">
+                    <input class="input-box" type="email" placeholder="E-mail" required>
+                    <span class="underline"></span>
+                </div>
 
-                <label class="label" for="Senha">Senha</label>
-                <input class="input" type="text" placeholder="Senha" id="Senha">
+                <div class="input-wrapper">
+                    <input class="input-box" type="password" placeholder="Senha" id="senha" required>
+                    <div id="icon" onclick="mostrarSenha()"></div>
+                    <span class="underline"></span>
+                </div>
 
-                <label class="label" for="Senha">Digite novamente sua senha</label>
-                <input class="input" type="text" placeholder="Senha" id="Digite novamente sua senha">
-                
-                <a href="" class="button-login">Cadastrar</a>
+                <div class="input-wrapper">
+                    <input class="input-box" type="password" placeholder="Confirmar Senha" id="confirmarSenha" required>
+                    <div id="icon" onclick="mostrarSenha()"></div>
+                    <span class="underline"></span>
+                </div>
+
+                <div class="container-button-form">
+                    <div class="container-button-form--header">
+                        <button class="button-cadastro">Criar Conta</button>
+                    </div>
+                </div>
             </form>
         </div>
     </main>
+
+    <script src="../../js/mostrarSenha.js"></script>
 </body>
 
 </html>
