--- a/views/Login/index.html
+++ b/views/Login/index.html
@@ -10,36 +10,50 @@
 </head>
 
 <body>
-    <header class="header">
-        <a href="../../index.html">
-            <img src="../../img/logo.png" alt="logo" class="logo-header">
-        </a>
-    </header>
-
-    <div class="container-hr">
-        <hr class="hr-header">
-    </div>
-
     <main class="main">
 
         <div class="container-form-login">
             <form action="" class="formulario">
 
-                <h3 class="form-titulo">Login</h3>
+                <div class="container-logo-form">
+                    <img class="logo-form" src="../../img/logo.png" alt="logo">
+                </div>
 
-                <label class="label" for="Nome">Nome completo</label>
-                <input class="input" type="text" placeholder="Nome completo" id="Nome">
+                <div class="input-wrapper">
+                    <input class="input-box" type="text" placeholder="Nome" required>
+                    <span class="underline"></span>
+                </div>
 
-                <label class="label" for="Email">Email</label>
-                <input class="input" type="text" placeholder="E-mail" id="Email">
+                <div class="input-wrapper">
+                    <input class="input-box" type="email" placeholder="E-mail" required>
+                    <span class="underline"></span>
+                </div>
 
-                <label class="label" for="Senha">Senha</label>
-                <input class="input" type="text" placeholder="Senha" id="Senha">
-                
-                <a href="" class="button-login">Entrar</a>
+                <div class="input-wrapper">
+                    <input class="input-box" type="password" placeholder="Senha" id="senha" required>
+                    <div id="icon" onclick="mostrarSenha()"></div>
+                    <span class="underline"></span>
+                </div>
+
+                <div class="container-button-form">
+                    <div class="container-button-form--header">
+                        <button class="button-login">Entrar</button>
+                        <a class="button-esqueci-senha" href="">Esqueci senha</a>
+                    </div>
+
+                    <div class="container-hr">
+                        <hr class="hr">
+                    </div>
+
+                    <div class="container-button-form--footer">
+                        <a href="../Cadastro/index.html" class="button-criar-conta">Criar Conta</a>
+                    </div>
+                </div>
             </form>
         </div>
     </main>
+
+    <script src="../../js/mostrarSenha.js"></script>
 </body>
 
 </html>
