Login, Cadastro e Recuperar senha finalizados.

--- a/views/Login/index.html
+++ b/views/Login/index.html
@@ -38,7 +38,7 @@
                 <div class="container-button-form">
                     <div class="container-button-form--header">
                         <button class="button-login">Entrar</button>
-                        <a class="button-esqueci-senha" href="">Esqueci senha</a>
+                        <a class="button-esqueci-senha" href="../RecuperarSenha/index.html">Esqueci senha</a>
                     </div>
 
                     <div class="container-hr">
