--- a/css/recuperarSenha.css
+++ b/css/recuperarSenha.css
@@ -25,14 +25,13 @@
     align-items: center;
 }
 
-.container-form-cadastro {
+.container-form-recuperarSenha {
     margin-top: 5rem;
 }
 
 .formulario {
     display: flex;
     flex-direction: column;
-    text-align: start;
     border: 1px solid #F1F0FA;
     border-radius: 2px;
     padding: 2rem 4rem;
@@ -49,12 +48,15 @@
     bottom: 0.5rem;
 }
 
-.form-titulo {
+.container-titulo{
     text-align: center;
-    position: relative;
-    bottom: 2rem;
+    margin: 1.5rem 0;
+}
+
+.form-titulo{
     font-weight: 500;
 }
+
 
 .input-wrapper {
     position: relative;
@@ -93,20 +95,14 @@
     transform: scaleX(1);
 }
 
-#icon{
-    background: url('../img/olho-aberto.png');
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    left: 10.5rem;
-    bottom: 0.5rem;
-    cursor: pointer;
-    background-size: cover;
+.container-aviso{
+    text-align: center;
+    margin-top: 1rem;
 }
 
-.container-button-form{
-    display: flex;
-    flex-direction: column;
+.form-aviso{
+    font-size: 14px;
+    color: #6e6e6e;
 }
 
 .container-button-form--header{
@@ -116,7 +112,7 @@
     margin: 1.5em 0;
 }
 
-.button-cadastro{
+.button-recuperarSenha{
     width: 50%;
     display: flex;
     justify-content: center;
@@ -132,7 +128,7 @@
     transition: 0.5s all;
 }
 
-.button-cadastro:hover{
+.button-recuperarSenha:hover{
     background-color: #f589cc;
 }
 
