--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,7 @@
     --corRosa: #FFA7DE;
 }
 
-.modonoturno:root{
-    
-}
+.modonoturno:root {}
 
 * {
     margin: 0;
@@ -39,8 +37,7 @@ body.dark {
         font-weight: 400;
         font-size: 16px;
     }
-
-    .item{
+    .item {
         color: #fafafa;
     }
 
@@ -58,6 +55,18 @@ body.dark {
         text-align: center;
         color: #fafafa;
     }
+
+    .input {
+        font-size: 0.9rem;
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+        padding-inline: 0.5em;
+        padding-block: 0.7em;
+        border: none;
+        color: #f1f0fa;
+    }
+
 }
 
 
@@ -69,7 +78,6 @@ body.dark {
     align-items: center;
     justify-content: space-around;
 }
-
 
 .nav {
     display: flex;
@@ -87,43 +95,96 @@ body.dark {
     flex-direction: row;
 }
 
-.nav-item a {
+.item{
     margin: 1.3rem;
     font-style: normal;
     color: #2a2c2b;
     font-weight: 400;
     font-size: 16px;
+    transition: 0.8s all;
 }
 
-.input-search {
-    background-color: #F1F0FA;
-    border-radius: 6px;
-    padding: 20px 55px;
+.form button {
+    border: none;
+    background: none;
+    color: #FFA7DE;
+}
+
+.form {
+    --timing: 0.3s;
+    --width-of-input: 200px;
+    --height-of-input: 40px;
+    --border-height: 2px;
+    --input-bg: ;
+    --border-color: #FFA7DE;
+    --border-radius: 30px;
+    --after-border-radius: 1px;
+    position: relative;
+    width: var(--width-of-input);
+    height: var(--height-of-input);
     display: flex;
     align-items: center;
+    padding-inline: 0.8em;
+    border-radius: var(--border-radius);
+    transition: border-radius 0.5s ease;
+    background: var(--input-bg, #f1f0fa);
 }
 
-.input-header {
-    border: none;
+.input {
+    font-size: 0.9rem;
     background-color: transparent;
+    width: 100%;
+    height: 100%;
+    padding-inline: 0.5em;
+    padding-block: 0.7em;
+    border: none;
+}
+
+/* styling of animated border */
+.form:before {
+    content: "";
+    position: absolute;
+    background: var(--border-color);
+    transform: scaleX(0);
+    transform-origin: center;
+    width: 100%;
+    height: var(--border-height);
+    left: 0;
+    bottom: 0;
+    border-radius: 1px;
+    transition: transform var(--timing) ease;
+}
+
+/* Hover on Input */
+.form:focus-within {
+    border-radius: var(--after-border-radius);
+}
+
+input:focus {
     outline: none;
-    position: relative;
-    right: 20px;
-    top: 3px;
-    color: #616161;
 }
 
-.input-header::placeholder {
-    color: #616161;
-    font-size: 14px;
+/* here is code of animated border */
+.form:focus-within:before {
+    transform: scale(1);
 }
 
-.input-icon {
-    background: transparent;
-    position: relative;
-    top: 2px;
-    left: 30px;
-    cursor: pointer;
+.reset {
+    border: none;
+    background: none;
+    opacity: 0;
+    visibility: hidden;
+}
+
+input:not(:placeholder-shown)~.reset {
+    opacity: 1;
+    visibility: visible;
+}
+
+.form svg {
+    width: 17px;
+    margin-top: 3px;
+    color: #FFA7DE;
 }
 
 .container-icons {
