modo noturno em todas as páginas

--- a/views/Pagamento/index.html
+++ b/views/Pagamento/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabrina Modas | Pagamentos</title>
     <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../../css/pagamento.css">
+    <link rel="stylesheet" href="./pagamento.css">
 </head>
 
 <body>
