--- a/views/Cadastro/index.html
+++ b/views/Cadastro/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabrina Modas | Cadastro</title>
     <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../../css/cadastro.css">
+    <link rel="stylesheet" href="./cadastro.css">
 </head>
 
 <body>
