--- a/views/Contato/contato.css
+++ b/views/Contato/contato.css
@@ -7,32 +7,88 @@
     --corRosa: #FFA7DE;
 }
 
+.modonoturno:root {}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
     font-family: var(--fontPrincipal);
-    color: var(--corTextPrincipal);
-    background-color: var(--corPrimaria);
     list-style: none;
+    text-decoration: none;
     overflow-x: hidden;
 }
+
+body {
+    background-color: #fafafa;
+    color: #2a2c2b;
+    transition: background 0.5s linear;
+    text-decoration: none;
+}
+
+body.dark {
+
+    background: #2a2c2b;
+    color: #fafafa;
+
+    .nav-item a {
+        margin: 1.3rem;
+        font-style: normal;
+        color: #fafafa;
+        font-weight: 400;
+        font-size: 16px;
+    }
+
+    .titulo-produto {
+        color: #fafafa;
+    }
+
+    .item {
+        color: #fafafa;
+    }
+
+    .card {
+        text-align: start;
+        padding: 20px;
+        border: 1px solid var(--corTextPrincipal);
+        cursor: pointer;
+        transition: transform 0.3s;
+    }
+
+    .titulo-categoria {
+        font-size: 26px;
+        font-weight: 600;
+        text-align: center;
+        color: #fafafa;
+    }
+
+    .input {
+        font-size: 0.9rem;
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+        padding-inline: 0.5em;
+        padding-block: 0.7em;
+        border: none;
+        color: #f1f0fa;
+    }
+
+}
+
+
+/* header */
 
 .header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
-
 
 .nav {
     display: flex;
     flex-direction: row;
     align-items: center;
-    position: relative;
-    left: 4.8rem;
 }
 
 .logo-header {
@@ -45,54 +101,156 @@
     flex-direction: row;
 }
 
-.nav-item {
+.item {
     margin: 1.3rem;
     font-style: normal;
+    color: #2a2c2b;
     font-weight: 400;
     font-size: 16px;
+    transition: 0.8s all;
 }
 
-.input-search {
-    background-color: #F1F0FA;
-    border-radius: 6px;
-    padding: 20px 55px;
+.form button {
+    border: none;
+    background: none;
+    color: #FFA7DE;
+}
+
+.form {
+    --timing: 0.3s;
+    --width-of-input: 200px;
+    --height-of-input: 40px;
+    --border-height: 2px;
+    --input-bg: ;
+    --border-color: #FFA7DE;
+    --border-radius: 30px;
+    --after-border-radius: 1px;
+    position: relative;
+    width: var(--width-of-input);
+    height: var(--height-of-input);
     display: flex;
     align-items: center;
+    padding-inline: 0.8em;
+    border-radius: var(--border-radius);
+    transition: border-radius 0.5s ease;
+    background: var(--input-bg, #f1f0fa);
 }
 
-.input-header {
-    border: none;
+.input {
+    font-size: 0.9rem;
     background-color: transparent;
+    width: 100%;
+    height: 100%;
+    padding-inline: 0.5em;
+    padding-block: 0.7em;
+    border: none;
+}
+
+/* styling of animated border */
+.form:before {
+    content: "";
+    position: absolute;
+    background: var(--border-color);
+    transform: scaleX(0);
+    transform-origin: center;
+    width: 100%;
+    height: var(--border-height);
+    left: 0;
+    bottom: 0;
+    border-radius: 1px;
+    transition: transform var(--timing) ease;
+}
+
+/* Hover on Input */
+.form:focus-within {
+    border-radius: var(--after-border-radius);
+}
+
+input:focus {
     outline: none;
-    position: relative;
-    right: 20px;
-    top: 3px;
-    color: #616161;
 }
 
-.input-header::placeholder {
-    color: #616161;
-    font-size: 14px;
+/* here is code of animated border */
+.form:focus-within:before {
+    transform: scale(1);
 }
 
-.input-icon {
-    background: transparent;
-    position: relative;
-    top: 2px;
-    left: 30px;
-    cursor: pointer;
+.reset {
+    border: none;
+    background: none;
+    opacity: 0;
+    visibility: hidden;
+}
+
+input:not(:placeholder-shown)~.reset {
+    opacity: 1;
+    visibility: visible;
+}
+
+.form svg {
+    width: 17px;
+    margin-top: 3px;
+    color: #FFA7DE;
 }
 
 .container-icons {
     display: flex;
     align-items: center;
     position: relative;
-    right: 10em;
 }
 
 .carrinho-compras {
     margin: 15px;
     cursor: pointer;
+}
+
+.switch {
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 3.5em;
+    height: 2em;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    --background: var(--corRosa);
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--corRosa);
+    transition: .5s;
+    border-radius: 30px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 1.4em;
+    width: 1.4em;
+    border-radius: 50%;
+    left: 10%;
+    bottom: 15%;
+    box-shadow: inset 8px -4px 0px 0px var(--corPrimaria);
+    background: var(--background);
+    transition: .5s;
+}
+
+input:checked+.slider {
+    background-color: var(--corRosa);
+}
+
+input:checked+.slider:before {
+    transform: translateX(100%);
+    box-shadow: inset 15px -4px 0px 15px var(--corPrimaria);
 }
 
 .container-hr {
@@ -124,18 +282,18 @@
     font-size: 15px;
 }
 
-.form {
+.formulario {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-top: 2rem;
 }
 
-.label {
+.label-formulario {
     margin: 0.3rem 0;
 }
 
-.input {
+.input-formulario {
     border: 1px solid #F1F0FA;
     background-color: #F1F0FA;
     border-radius: 3px;
@@ -165,36 +323,40 @@
     margin-top: 20px;
 }
 
-.divulgacao-contatos{
+.divulgacao-contatos {
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
-    
+
 }
 
-.divulgacao-item{
+.divulgacao-item {
     margin: 15px 0;
 }
 
-.titulo-divulgacao{
+.titulo-divulgacao {
     font-size: 20px;
     font-weight: 500;
 }
 
-.divulgacao-container{
+.divulgacao-container {
     display: flex;
     margin-top: 15px;
     align-items: center;
 }
 
-.divulgacao-text{
+.divulgacao-text {
     width: 80%;
 }
 
 .footer {
-    background-color: #FBFCFE;
     max-width: 100%;
     margin: 5rem 0;
+}
+
+.container-hr {
+    display: grid;
+    place-items: center;
 }
 
 .footer--cabecalho {
@@ -270,7 +432,7 @@
     flex-grow: 1;
 }
 
-.logo-rodape{
+.logo-rodape {
     width: 30%;
 }
 
@@ -279,13 +441,13 @@
     flex-grow: 1;
 }
 
-.footer--item-contato{
+.footer--item-contato {
     display: flex;
     padding: 12px 0;
     align-items: start;
 }
 
-.footer--item-contato img{
+.footer--item-contato img {
     margin-right: 10px;
 }
 
@@ -294,6 +456,6 @@
     flex-grow: 1;
 }
 
-.footer-icons{
+.footer-icons {
     padding: 0 10px;
 }
