--- a/views/Contato/index.html
+++ b/views/Contato/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabrina Modas | Contatos</title>
-    <link rel="stylesheet" href="../../css/contato.css">
     <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./contato.css">
 </head>
 
 <body>
@@ -18,109 +18,111 @@
                 <img src="../../img/logo.png" alt="logo" class="logo-header">
             </a>
 
-
-
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="../../index.html">Home</a>
+                    <a class="item" href="../../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../Produtos/index.html">Produtos</a>
+                    <a class="item" href="../Produtos/index.html">Produtos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Contato</a>
+                    <a class="item" href="../Contato/index.html">Contato</a>
                 </li>
             </ul>
         </nav>
 
-        <div class="input-search">
-            <input class="input-header" type="search" placeholder="Faça sua pesquisa" />
-            <img class="input-icon" src="../../img/procurar.png" alt="procurar">
+        <div>
+            <label class="switch">
+                <input type="checkbox" checked="checked" id="chk" />
+                <span class="slider"></span>
+            </label>
         </div>
-
+        
         <div class="container-icons">
-            <div class="carrinho-compras">
-                <img src="../../img/carrinho.png" alt="carrinho">
-            </div>
-
             <div class="perfil">
                 <img src="../../img/perfil.png" alt="perfil">
             </div>
         </div>
 
 
-
     </header>
+
 
     <div class="container-hr">
         <hr class="hr-header">
     </div>
 
-    <section class="container-contatos">
-        <div class="form-contatos">
-            <h2 class="titulo-contato">Fale conosco</h2>
-            <p class="semi-titulo">Precisa falar com a gente ? Utilize uma das opções abaixo para entrar em contato
-                conosco.</p>
-            <div class="container-form">
-                <h3 class="titulo-form">Formulário de Contato</h3>
-                <p class="semi-titulo--form">Campos marcados com * são de preenchimento obrigatório.</p>
-                <form class="form">
-                    <label class="label" for="nome">*Nome:</label>
-                    <input class="input" type="text" name="nome" id="nome">
+    <main>
 
-                    <label class="label" for="email">*Email:</label>
-                    <input class="input" type="email" name="email" id="email">
+        <section class="container-contatos">
+            <div class="form-contatos">
+                <h2 class="titulo-contato">Fale conosco</h2>
+                <p class="semi-titulo">Precisa falar com a gente ? Utilize uma das opções abaixo para entrar em contato
+                    conosco.</p>
+                <div class="container-form">
+                    <h3 class="titulo-form">Formulário de Contato</h3>
+                    <p class="semi-titulo--form">Campos marcados com * são de preenchimento obrigatório.</p>
+                    <form class="formulario">
+                        <label class="label-formulario" for="nome">*Nome:</label>
+                        <input class="input-formulario" type="text" name="nome" id="nome">
 
-                    <label class="label" for="telefone">Telefone:</label>
-                    <input class="input" type="tel" name="telefone" id="telefone">
+                        <label class="label-formulario" for="email">*Email:</label>
+                        <input class="input-formulario" type="email" name="email" id="email">
 
-                    <label class="label" for="assunto">Assunto</label>
-                    <input class="input" type="text" name="assunto" id="assunto">
+                        <label class="label-formulario" for="telefone">Telefone:</label>
+                        <input class="input-formulario" type="tel" name="telefone" id="telefone">
 
-                    <label class="label" for="mensagem">*Mensagem</label>
-                    <textarea class="textarea" name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
+                        <label class="label-formulario" for="assunto">Assunto</label>
+                        <input class="input-formulario" type="text" name="assunto" id="assunto">
 
-                    <button class="button-enviar">Enviar</button>
+                        <label class="label-formulario" for="mensagem">*Mensagem</label>
+                        <textarea class="textarea" name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
 
-                </form>
+                        <button class="button-enviar">Enviar</button>
+
+                    </form>
 
 
-            </div>
-        </div>
-        <div class="divulgacao-contatos">
-            <div class="divulgacao-item">
-                <p class="titulo-divulgacao">Central de Atendimento ao Cliente</p>
-                <div class="divulgacao-container">
-                    <img src="../../img/celular.png" alt="icon-celular">
-                    <p class="divulgacao-text">(11)99713-5477</p>
                 </div>
             </div>
-            <div class="divulgacao-item">
-                <p class="titulo-divulgacao">Atendimento Online</p>
-                <div class="divulgacao-container">
-                    <p class="divulgacao-text">Fale por WhatsApp.</p>
+            <div class="divulgacao-contatos">
+                <div class="divulgacao-item">
+                    <p class="titulo-divulgacao">Central de Atendimento ao Cliente</p>
+                    <div class="divulgacao-container">
+                        <img src="../../img/celular.png" alt="icon-celular">
+                        <p class="divulgacao-text">(11)99713-5477</p>
+                    </div>
+                </div>
+                <div class="divulgacao-item">
+                    <p class="titulo-divulgacao">Atendimento Online</p>
+                    <div class="divulgacao-container">
+                        <p class="divulgacao-text">Fale por WhatsApp.</p>
+                    </div>
+                </div>
+                <div class="divulgacao-item">
+                    <p class="titulo-divulgacao">Email</p>
+                    <div class="divulgacao-container">
+                        <p class="divulgacao-text">contato@sabrinaModas.com.br</p>
+                    </div>
+                </div>
+                <div class="divulgacao-item">
+                    <p class="titulo-divulgacao">Dados da empresa</p>
+                    <div class="divulgacao-container">
+                        <p class="divulgacao-text">CNPJ: </p>
+                    </div>
+                </div>
+                <div class="divulgacao-item">
+                    <p class="titulo-divulgacao">Endereço</p>
+                    <div class="divulgacao-container">
+                        <p class="divulgacao-text">Sabrina Modas </p>
+                    </div>
                 </div>
             </div>
-            <div class="divulgacao-item">
-                <p class="titulo-divulgacao">Email</p>
-                <div class="divulgacao-container">
-                    <p class="divulgacao-text">contato@sabrinaModas.com.br</p>
-                </div>
-            </div>
-            <div class="divulgacao-item">
-                <p class="titulo-divulgacao">Dados da empresa</p>
-                <div class="divulgacao-container">
-                    <p class="divulgacao-text">CNPJ: </p>
-                </div>
-            </div>
-            <div class="divulgacao-item">
-                <p class="titulo-divulgacao">Endereço</p>
-                <div class="divulgacao-container">
-                    <p class="divulgacao-text">Sabrina Modas </p>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
+
+
+    </main>
+
     <footer class="footer">
         <div class="footer--cabecalho">
             <div class="footer--titulo-newsletter">
@@ -168,6 +170,8 @@
         </div>
 
     </footer>
+
+    <script src="../../js/modoNoturno.js"></script>
 </body>
 
 </html>
