--- a/views/Produtos/index.html
+++ b/views/Produtos/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabrina Modas | Produtos</title>
     <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./../../css/produto.css">
+    <link rel="stylesheet" href="./produto.css">
 </head>
 
 <body>
