--- a/views/Produtos/index.html
+++ b/views/Produtos/index.html
@@ -327,8 +327,8 @@
     <footer class="footer">
         <div class="footer--cabecalho">
             <div class="footer--titulo-newsletter">
-                <h3>CADASTRE-SE EM NOSSA NEWSLETTER</h3>
-                <h4>e receba novidades e promoções da nossa loja</h4>
+                <h3>CADASTRE-SE</h3>
+                <h4>para receba novidades e promoções da nossa loja</h4>
             </div>
 
             <div class="footer--compo-texto">
@@ -363,10 +363,6 @@
                     <img src="../../img/email.png" alt="email.png" class="footer-icons">
                     <p>contato@wallyssonsousa.com.br</p>
                 </div>
-            </div>
-            <div class="footer--pagamento">
-                <h4>Formas de pagamento</h4>
-                <img src="../../img/lista-pagamentos.png" alt="lista-pagamentos">
             </div>
         </div>
 
