--- a/views/Contato/index.html
+++ b/views/Contato/index.html
@@ -31,13 +31,21 @@
             </ul>
         </nav>
 
-        
+
         <div class="container-icons">
             <div class="perfil">
                 <img src="../../img/perfil.png" alt="perfil">
+                <div class="container-login-cadastro">
+                    <h4 class="nome-conta">Minha conta</h4>
+                    <div class="login-cadastro">
+                        <a href="../../views/Login/index.html">Login</a>
+                        <p>/</p>
+                        <a href="../../views/Cadastro/index.html">Cadastro</a>
+                    </div>
+                </div>
             </div>
         </div>
-        
+
         <div>
             <label class="switch">
                 <input type="checkbox" checked="checked" id="chk" />
