--- a/views/Produtos/index.html
+++ b/views/Produtos/index.html
@@ -56,6 +56,15 @@
 
             <div class="perfil">
                 <img src="../../img/perfil.png" alt="perfil">
+
+                <div class="container-login-cadastro">
+                    <h4 class="nome-conta">Minha conta</h4>
+                    <div class="login-cadastro">
+                        <a href="views/Login/index.html">Login</a>
+                        <p>/</p>
+                        <a href="views/Cadastro/index.html">Cadastro</a>
+                    </div>
+                </div>
             </div>
         </div>
 
