--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,7 @@ input:checked+.slider:before {
     color: #0f0f0f;
 }
 
+
 .container-card {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -406,7 +407,7 @@ input:checked+.slider:before {
     margin: 3rem;
 }
 
-.card {
+ .card {
     text-align: start;
     padding: 20px;
     border: 1px solid #f1f1f1;
@@ -453,7 +454,7 @@ input:checked+.slider:before {
     color: var(--corRosa);
     font-weight: 600;
     margin: 5px 0;
-}
+} 
 
 .card button.add-carrinho {
     display: none;
@@ -477,48 +478,320 @@ input:checked+.slider:before {
     display: block;
 }
 
-/*Responsividade containers de produtos*/
+/* Responsividade containers de produtos */
 
 @media screen and (max-width: 905px) {
     .container-card{
+        display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-gap: 30px;
+        grid-gap: 10px;
         margin: 3rem;
     }
 
-    .card-content {
+    .card{
+        text-align: start;
+        padding: 40px;
+        border: 1px solid #f1f1f1;
+        cursor: pointer;
+        transition: transform 0.3s;
+    }
+
+    .card:hover{
+        transform: translateY(-10px);
+    }
+
+    .card-img{
+        display: flex;
+        justify-content: center;
+        align-items: start;
+    }
+
+    .card-content{
         position: relative;
         bottom: 20px;
         margin-bottom: 20px;
     }
-    
-    .img-card {
-        width: 70%;
-        height: 280px;
+
+    .img-card{
+        width: 100%;
+        height: 300px;
         object-fit: cover;
     }
 
+    .card-descricao{
+        display: flex;
+        align-items: flex-start;
+        flex-direction: row;
+    }
+
+    .descricao-card{
+        font-size: 14px;
+        font-weight: 600;
+        margin: 10px 0;
+    }
+
+    .preco-card{
+        color: var(--corRosa);
+        font-weight: 600;
+    }
+
+    .card button.add-carrinho {
+        display: none;
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: var(--corRosa);
+        color: #fff;
+        font-weight: 400;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 6px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 14px;
+        cursor: pointer;
+    }
+    
+    .card:hover button.add-carrinho {
+        display: block;
+    }
 }
 
 @media screen and (max-width: 680px) {
     .container-card{
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 20px;
-        margin: 3rem;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 10px;
+        margin: 1em;
     }
 
-    .card-content {
+    .card{
+        text-align: start;
+        padding: 40px;
+        border: 1px solid #f1f1f1;
+        cursor: pointer;
+        transition: transform 0.3s;
+    }
+
+    .card:hover{
+        transform: translateY(-10px);
+    }
+
+    .card-img{
+        display: flex;
+        justify-content: center;
+        align-items: start;
+    }
+
+    .card-content{
         position: relative;
         bottom: 20px;
         margin-bottom: 20px;
     }
-    
-    .img-card {
-        width: 80%;
-        height: 270px;
+
+    .img-card{
+        width: 100%;
+        height: 180px;
         object-fit: cover;
     }
 
+    .card-descricao{
+        display: flex;
+        align-items: flex-start;
+        flex-direction: row;
+    }
+
+    .descricao-card{
+        font-size: 13px;
+        font-weight: 600;
+        margin: 10px 0;
+    }
+
+    .preco-card{
+        color: var(--corRosa);
+        font-weight: 600;
+    }
+
+    .card button.add-carrinho {
+        display: none;
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: var(--corRosa);
+        color: #fff;
+        font-weight: 400;
+        border: none;
+        padding: 7px 17px;
+        border-radius: 4px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 12px;
+        cursor: pointer;
+    }
+    
+    .card:hover button.add-carrinho {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 495px){
+    .container-card{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
+        margin: 1em 0.2em;
+    }
+
+    .card{
+        text-align: start;
+        padding: 50px;
+        border: 1px solid #f1f1f1;
+        cursor: pointer;
+        transition: transform 0.3s;
+    }
+
+    .card:hover{
+        transform: translateY(-10px);
+    }
+
+    .card-img{
+        display: flex;
+        justify-content: center;
+        align-items: start;
+    }
+
+    .card-content{
+        position: relative;
+        bottom: 20px;
+        margin-bottom: 20px;
+    }
+
+    .img-card{
+        width: 100%;
+        height: 180px;
+        object-fit: cover;
+    }
+
+    .card-descricao{
+        display: flex;
+        align-items: flex-start;
+        flex-direction: row;
+    }
+
+    .descricao-card{
+        font-size: 12px;
+        font-weight: 600;
+        margin: 10px 0;
+    }
+
+    .preco-card{
+        color: var(--corRosa);
+        font-weight: 600;
+    }
+
+    .card button.add-carrinho {
+        display: none;
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: var(--corRosa);
+        color: #fff;
+        font-weight: 400;
+        border: none;
+        padding: 7px 17px;
+        border-radius: 4px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 12px;
+        cursor: pointer;
+    }
+    
+    .card:hover button.add-carrinho {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 450px){
+    .container-card{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid: 10px;
+        margin: 0.9em 0.1em;
+    }
+
+    .card{
+        text-align: start;
+        padding: 50px;
+        border: 1px solid #f1f1f1;
+        cursor: pointer;
+        transition: transform 0.3s;
+        margin: 0.8em;
+    }
+
+    .card:hover{
+        transform: translateY(-10px);
+    }
+
+    .card-img{
+        display: flex;
+        justify-content: center;
+        align-items: start;
+    }
+
+    .card-content{
+        position: relative;
+        bottom: 20px;
+        margin-bottom: 20px;
+    }
+
+    .img-card{
+        width:  100%;
+        height: 180px;
+        object-fit: cover;
+    }
+
+    .card-descricao{
+        display: flex;
+        align-items: flex-start;
+        flex-direction: row;
+    }
+
+    .descricao-card{
+        font-size: 12px;
+        font-weight: 600;
+        margin: 10px 0;
+    }
+
+    .preco-card{
+        color: var(--corRosa);
+        font-weight: 600;
+        font-size: 14px;
+    }
+
+    .card button.add-carrinho {
+        display: none;
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: var(--corRosa);
+        color: #fff;
+        font-weight: 400;
+        border: none;
+        padding: 4px 14px;
+        border-radius: 3px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 10px;
+        cursor: pointer;
+    }
+    
+    .card:hover button.add-carrinho {
+        display: block;
+    }
 }
 
 /**/
