front-end finalizado

--- a/views/Cadastro/cadastro.css
+++ b/views/Cadastro/cadastro.css
@@ -13,11 +13,114 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: var(--fontPrincipal);
-    color: var(--corTextPrincipal);
-    background-color: var(--corPrimaria);
     list-style: none;
     overflow-x: hidden;
 }
+
+
+body {
+    background-color: #fafafa;
+    color: #2a2c2b;
+    transition: background 0.8s linear;
+    text-decoration: none;
+}
+
+body.dark {
+
+    background: #2a2c2b;
+    color: #fafafa;
+
+    .formulario {
+        border: 1px solid var(--corTextPrincipal);
+    }
+
+    .input-box {
+        border-bottom: 2px solid var(--corTextPrincipal);
+        color: var(--corPrimaria);
+    }
+
+    .input-box::placeholder {
+        color: #393939;
+    }
+
+    .button-esqueci-senha {
+        color: var(--corPrimaria);
+    }
+}
+
+header {
+    margin: 1em 3em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.container-buttonVoltar {
+    background-color: transparent;
+    border: 1px solid #FFA7DE;
+    padding: 10px;
+    border-radius: 4px;
+}
+
+.button-voltar {
+    color: #FFA7DE;
+    font-weight: 400;
+}
+
+.container-buttonVoltar:hover {
+    opacity: 0.7;
+}
+
+.switch {
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 3.5em;
+    height: 2em;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    --background: var(--corRosa);
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--corRosa);
+    transition: .5s;
+    border-radius: 30px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 1.4em;
+    width: 1.4em;
+    border-radius: 50%;
+    left: 10%;
+    bottom: 15%;
+    box-shadow: inset 8px -4px 0px 0px var(--corPrimaria);
+    background: var(--background);
+    transition: .5s;
+}
+
+input:checked+.slider {
+    background-color: var(--corRosa);
+}
+
+input:checked+.slider:before {
+    transform: translateX(100%);
+    box-shadow: inset 15px -4px 0px 15px var(--corPrimaria);
+}
+
+/**/
 
 .main {
     display: flex;
@@ -26,7 +129,7 @@
 }
 
 .container-form-cadastro {
-    margin-top: 5rem;
+    margin-top: 1rem;
 }
 
 .formulario {
@@ -93,7 +196,7 @@
     transform: scaleX(1);
 }
 
-#icon{
+#icon {
     background: url('../img/olho-aberto.png');
     width: 24px;
     height: 24px;
@@ -104,19 +207,19 @@
     background-size: cover;
 }
 
-.container-button-form{
+.container-button-form {
     display: flex;
     flex-direction: column;
 }
 
-.container-button-form--header{
+.container-button-form--header {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 1.5em 0;
 }
 
-.button-cadastro{
+.button-cadastro {
     width: 50%;
     display: flex;
     justify-content: center;
@@ -132,7 +235,6 @@
     transition: 0.5s all;
 }
 
-.button-cadastro:hover{
+.button-cadastro:hover {
     background-color: #f589cc;
 }
-
