--- a/views/Login/index.html
+++ b/views/Login/index.html
@@ -10,6 +10,19 @@
 </head>
 
 <body>
+
+    <header>
+        <div class="container-buttonVoltar">
+            <a href="../../index.html" class="button-voltar">Volta</a>
+        </div>
+        <div>
+            <label class="switch">
+                <input type="checkbox" checked="checked" id="chk" />
+                <span class="slider"></span>
+            </label>
+        </div>
+    </header>
+
     <main class="main">
 
         <div class="container-form-login">
@@ -53,6 +66,7 @@
         </div>
     </main>
 
+    <script src="../../js/modoNoturno.js"></script>
     <script src="../../js/mostrarSenha.js"></script>
 </body>
 
